--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://TusharMurkar.github.io/YBDemo-React-App",
+    "homepage": "https://tusharmurkar.github.io/YBDemo-React-App/",
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
